[tool.poetry]
name = "url-shortener"
version = "0.0.1"
description = "URL Shortener API"
authors = ["Craig Fiedorek <rcraigfiedorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apiflask = "1.1.2"
flask-sqlalchemy = "^3.0.2"
gunicorn = "^20.1.0"
pg8000 = "^1.29.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest = "^7.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
preview = true
